--- a/ATOLL/_Imports.razor
+++ b/ATOLL/_Imports.razor
@@ -6,9 +6,12 @@
 @using Microsoft.JSInterop
 @using ATOLL
 @using ATOLL.Shared
-@using Syncfusion.Blazor.Charts
+
 @using System
 @using System.Collections.Generic
 @using System.IO
 @using System.Text.RegularExpressions;
 @using System.Globalization;
+@using Syncfusion.Blazor.Grids
+@using Syncfusion.Blazor.Charts
+@using Syncfusion.Blazor.DropDowns
