Ajout du bouton enregistrer

--- a/ATOLL/Pages/Graphique.razor
+++ b/ATOLL/Pages/Graphique.razor
@@ -94,6 +94,7 @@
             }
         </div>
     </div>
+    <button onclick="dwnlod">Download</button>
 </div>
 
 
@@ -170,6 +171,8 @@
         this.setCartesien();
 
     }
+
+    public void 
 
     @*méthode permettant de définir le tableau cartésien*@
     public void setCartesien()
